fix output scrollbar + vars

--- a/src/app/main/client/components/dashboard/character-panel/character-panel.component.scss
+++ b/src/app/main/client/components/dashboard/character-panel/character-panel.component.scss
@@ -62,9 +62,8 @@
   
     .charName {
       text-transform: uppercase;
-      padding-left:  4px;
-      padding-right: 6px;
-      margin-right: 1em;
+      padding-left:  8px;
+      padding-right: 0.5em;
     }
   
     /* status icons */
